--- a/Presentacion/WebUI/Views/Shared/_Layout.cshtml
+++ b/Presentacion/WebUI/Views/Shared/_Layout.cshtml
@@ -3,11 +3,32 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <title>Blog</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
+    <link href="~/Content/css/site.css" rel="stylesheet" />
+
 </head>
 <body>
-    <div>
-        @RenderBody()
-    </div>
+
+    <nav class="navbar is-trasparent">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+                    <image src="Content/images/milogo.png" width="100" height="25" />
+                </a>
+            </div>
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">Pages</a>
+                    <a class="navbar-item">Privacy</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section class="section">
+        <div class="container">
+            @RenderBody()
+        </div>
+    </section>
 </body>
 </html>
